--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <div class="container">
             <p>&copy; 2024 Niraj Dhungana. All Rights Reserved.</p>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/nirajdhungana" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/nirajdhungana" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://twitter.com/nirajdhungana" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="mailto:nirajdhungana0fficial@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.facebook.com/niraj.dhungana.583?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/niraj.dhungana/profilecard/?igsh=cG9oZDQwbmF6bzBx" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://np.linkedin.com/in/niraj-dhungana-76a61120a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/Niraaaaaj/" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
